<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="bottom"
        >

        <!-- شاشة الإدخال -->
        <TextView
            android:id="@+id/tv_input_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/text_num0"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:textIsSelectable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_output_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- شاشة الإخراج -->
        <TextView
            android:id="@+id/tv_output_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/text_num0"
            android:textColor="@color/text"
            android:textSize="32sp"
            android:textIsSelectable="true"
            app:layout_constraintTop_toBottomOf="@id/tv_input_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/v_len_id"
            android:layout_marginTop="8dp" />

        <!-- خط فاصل -->
        <View
            android:id="@+id/v_len_id"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#cccccc"
            app:layout_constraintTop_toBottomOf="@id/tv_output_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttons_grid"
            android:layout_marginTop="8dp"
            />

        <!-- شبكة الأزرار -->
        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/buttons_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:columnCount="4"
            app:rowCount="5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/v_len_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <!-- الصف الأول: C - Delete - % - ÷ -->
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_numC"
                android:id="@+id/btn_clear_id"
                android:background="@drawable/custom_btn_operation"
                android:textColor="@color/orange"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <ImageButton
                android:src="@android:drawable/ic_input_delete"
                android:background="@android:color/transparent"
                app:tint="@color/orange"
                android:id="@+id/btn_delete_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_percent"
                android:id="@+id/btn_percent_id"
                android:background="@drawable/custom_btn_operation"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_div"
                android:id="@+id/btn_divide_id"
                android:background="@drawable/custom_btn_operation"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"

                />

            <!-- الصف الثاني: 7 8 9 × -->
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num7"
                android:id="@+id/btn_num7_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num8"
                android:layout_width="0dp"
                android:id="@+id/btn_num8_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num9"
                android:id="@+id/btn_num9_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_mul"
                android:layout_width="0dp"
                android:textColor="#ffa500"
                android:id="@+id/btn_mul_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:backgroundTint="@color/cardview_light_background"
                />

            <!-- الصف الثالث: 4 5 6 − -->
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num4"
                android:layout_width="0dp"
                android:id="@+id/btn_num4_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num5"
                android:layout_width="0dp"
                android:id="@+id/btn_num5_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num6"
                android:id="@+id/btn_num6_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sub_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cardview_light_background"
                android:textColor="#ffa500"
                android:text="@string/text_sup"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <!-- الصف الرابع: 1 2 3 + -->
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num1"
                android:layout_width="0dp"
                android:id="@+id/btn_num1_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num2"
                android:layout_width="0dp"
                android:id="@+id/btn_num2_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num3"
                android:layout_width="0dp"
                android:id="@+id/btn_num3_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_add"
                android:layout_width="0dp"
                android:backgroundTint="@color/cardview_light_background"
                android:id="@+id/btn_add_id"
                android:textColor="#ffa500"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <!-- الصف الخامس: 0 . = -->
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_num0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="2"
                android:id="@+id/btn_num0_id"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_dot"
                android:layout_width="0dp"
                android:id="@+id/btn_dot_id"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/text_equal"
                android:id="@+id/btn_equal_id"
                android:background="@drawable/custom_btn_equal"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                />

        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
